[project]
name = "langsmith-evals-playwright"
version = "0.1.0"
description = "A LangChain evaluation pipeline that uses Playwright to interact with chat.langchain.com, scrape responses, and evaluate them using LLM-as-judge evaluator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "langsmith>=0.1.0",
    "openevals>=0.1.0",
    "playwright>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

